--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,35 @@
 body {
-    background: url("img/instruments-john-matychuk-unsplash.jpg");
+    background: url(../img/instruments-john-matychuk-unsplash.jpg) center no-repeat;
+    background-size: cover;
+    height: 850px;
+    width: auto;
+    margin: auto;
+}
+
+.wrapper {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+}
+
+div#drum-keys {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    height: 100%;
+}
+
+.key {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    text-align: center;
+    border: solid crimson;
+    padding: 10px 30px;
+    margin: 10px 30px;
+    max-width: 30px;
+
 }
